fret-electron/support/PrismProp/PrismPropParser.js
// Generated from PrismProp.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var PrismPropListener = require('./PrismPropListener').PrismPropListener;
var PrismPropVisitor = require('./PrismPropVisitor').PrismPropVisitor;

var grammarFileName = "PrismProp.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'X'", "'F'", "'G'", "'U'", "'W'", "'R'", "':'", 
                     "','", "'('", "')'", "'['", "']'", "'+'", "'-'", "'*'", 
                     "'/'", "'='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'true'", "'false'", "'!'", "'&'", "'|'", "'<=>'", 
                     "'=>'", "'?'", "'=?'", "'P'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, "ID", "NUMBER", 
                      "WS" ];

var ruleNames =  [ "probBoolFormula", "probQuery", "pathFormula", "unaryPathOp", 
                   "unaryBoundedPathOp", "binaryBoundedPathOp", "binaryPathOp", 
                   "timeBound", "stateFormula", "arithExpr", "atomicProp", 
                   "variable", "next", "future", "global", "until", "weakUntil", 
                   "releases", "colon", "comma", "lpr", "rpr", "lsqr", "rsqr", 
                   "plus", "minus", "mult", "divide", "comparisonOp", "eq", 
                   "ne", "lt", "gt", "le", "ge", "trueConst", "falseConst", 
                   "lnot", "land", "lor", "liff", "limplies", "lite", "query", 
                   "probOp", "time", "probNum" ];

function PrismPropParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

PrismPropParser.prototype = Object.create(antlr4.Parser.prototype);
PrismPropParser.prototype.constructor = PrismPropParser;

Object.defineProperty(PrismPropParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

PrismPropParser.EOF = antlr4.Token.EOF;
PrismPropParser.T__0 = 1;
PrismPropParser.T__1 = 2;
PrismPropParser.T__2 = 3;
PrismPropParser.T__3 = 4;
PrismPropParser.T__4 = 5;
PrismPropParser.T__5 = 6;
PrismPropParser.T__6 = 7;
PrismPropParser.T__7 = 8;
PrismPropParser.T__8 = 9;
PrismPropParser.T__9 = 10;
PrismPropParser.T__10 = 11;
PrismPropParser.T__11 = 12;
PrismPropParser.T__12 = 13;
PrismPropParser.T__13 = 14;
PrismPropParser.T__14 = 15;
PrismPropParser.T__15 = 16;
PrismPropParser.T__16 = 17;
PrismPropParser.T__17 = 18;
PrismPropParser.T__18 = 19;
PrismPropParser.T__19 = 20;
PrismPropParser.T__20 = 21;
PrismPropParser.T__21 = 22;
PrismPropParser.T__22 = 23;
PrismPropParser.T__23 = 24;
PrismPropParser.T__24 = 25;
PrismPropParser.T__25 = 26;
PrismPropParser.T__26 = 27;
PrismPropParser.T__27 = 28;
PrismPropParser.T__28 = 29;
PrismPropParser.T__29 = 30;
PrismPropParser.T__30 = 31;
PrismPropParser.T__31 = 32;
PrismPropParser.ID = 33;
PrismPropParser.NUMBER = 34;
PrismPropParser.WS = 35;

PrismPropParser.RULE_probBoolFormula = 0;
PrismPropParser.RULE_probQuery = 1;
PrismPropParser.RULE_pathFormula = 2;
PrismPropParser.RULE_unaryPathOp = 3;
PrismPropParser.RULE_unaryBoundedPathOp = 4;
PrismPropParser.RULE_binaryBoundedPathOp = 5;
PrismPropParser.RULE_binaryPathOp = 6;
PrismPropParser.RULE_timeBound = 7;
PrismPropParser.RULE_stateFormula = 8;
PrismPropParser.RULE_arithExpr = 9;
PrismPropParser.RULE_atomicProp = 10;
PrismPropParser.RULE_variable = 11;
PrismPropParser.RULE_next = 12;
PrismPropParser.RULE_future = 13;
PrismPropParser.RULE_global = 14;
PrismPropParser.RULE_until = 15;
PrismPropParser.RULE_weakUntil = 16;
PrismPropParser.RULE_releases = 17;
PrismPropParser.RULE_colon = 18;
PrismPropParser.RULE_comma = 19;
PrismPropParser.RULE_lpr = 20;
PrismPropParser.RULE_rpr = 21;
PrismPropParser.RULE_lsqr = 22;
PrismPropParser.RULE_rsqr = 23;
PrismPropParser.RULE_plus = 24;
PrismPropParser.RULE_minus = 25;
PrismPropParser.RULE_mult = 26;
PrismPropParser.RULE_divide = 27;
PrismPropParser.RULE_comparisonOp = 28;
PrismPropParser.RULE_eq = 29;
PrismPropParser.RULE_ne = 30;
PrismPropParser.RULE_lt = 31;
PrismPropParser.RULE_gt = 32;
PrismPropParser.RULE_le = 33;
PrismPropParser.RULE_ge = 34;
PrismPropParser.RULE_trueConst = 35;
PrismPropParser.RULE_falseConst = 36;
PrismPropParser.RULE_lnot = 37;
PrismPropParser.RULE_land = 38;
PrismPropParser.RULE_lor = 39;
PrismPropParser.RULE_liff = 40;
PrismPropParser.RULE_limplies = 41;
PrismPropParser.RULE_lite = 42;
PrismPropParser.RULE_query = 43;
PrismPropParser.RULE_probOp = 44;
PrismPropParser.RULE_time = 45;
PrismPropParser.RULE_probNum = 46;


function ProbBoolFormulaContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PrismPropParser.RULE_probBoolFormula;
    return this;
}

ProbBoolFormulaContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProbBoolFormulaContext.prototype.constructor = ProbBoolFormulaContext;

ProbBoolFormulaContext.prototype.probOp = function() {
    return this.getTypedRuleContext(ProbOpContext,0);
};

ProbBoolFormulaContext.prototype.comparisonOp = function() {
    return this.getTypedRuleContext(ComparisonOpContext,0);
};

ProbBoolFormulaContext.prototype.probNum = function() {
    return this.getTypedRuleContext(ProbNumContext,0);
};

ProbBoolFormulaContext.prototype.lsqr = function() {
    return this.getTypedRuleContext(LsqrContext,0);
};

ProbBoolFormulaContext.prototype.pathFormula = function() {
    return this.getTypedRuleContext(PathFormulaContext,0);
};

ProbBoolFormulaContext.prototype.rsqr = function() {
    return this.getTypedRuleContext(RsqrContext,0);
};

ProbBoolFormulaContext.prototype.enterRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.enterProbBoolFormula(this);
	}
};

ProbBoolFormulaContext.prototype.exitRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.exitProbBoolFormula(this);
	}
};

ProbBoolFormulaContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PrismPropVisitor ) {
        return visitor.visitProbBoolFormula(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PrismPropParser.ProbBoolFormulaContext = ProbBoolFormulaContext;

PrismPropParser.prototype.probBoolFormula = function() {

    var localctx = new ProbBoolFormulaContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, PrismPropParser.RULE_probBoolFormula);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 94;
        this.probOp();
        this.state = 95;
        this.comparisonOp();
        this.state = 96;
        this.probNum();
        this.state = 97;
        this.lsqr();
        this.state = 98;
        this.pathFormula(0);
        this.state = 99;
        this.rsqr();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ProbQueryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PrismPropParser.RULE_probQuery;
    return this;
}

ProbQueryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProbQueryContext.prototype.constructor = ProbQueryContext;

ProbQueryContext.prototype.probOp = function() {
    return this.getTypedRuleContext(ProbOpContext,0);
};

ProbQueryContext.prototype.query = function() {
    return this.getTypedRuleContext(QueryContext,0);
};

ProbQueryContext.prototype.lsqr = function() {
    return this.getTypedRuleContext(LsqrContext,0);
};

ProbQueryContext.prototype.pathFormula = function() {
    return this.getTypedRuleContext(PathFormulaContext,0);
};

ProbQueryContext.prototype.rsqr = function() {
    return this.getTypedRuleContext(RsqrContext,0);
};

ProbQueryContext.prototype.enterRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.enterProbQuery(this);
	}
};

ProbQueryContext.prototype.exitRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.exitProbQuery(this);
	}
};

ProbQueryContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PrismPropVisitor ) {
        return visitor.visitProbQuery(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PrismPropParser.ProbQueryContext = ProbQueryContext;

PrismPropParser.prototype.probQuery = function() {

    var localctx = new ProbQueryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, PrismPropParser.RULE_probQuery);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 101;
        this.probOp();
        this.state = 102;
        this.query();
        this.state = 103;
        this.lsqr();
        this.state = 104;
        this.pathFormula(0);
        this.state = 105;
        this.rsqr();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function PathFormulaContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PrismPropParser.RULE_pathFormula;
    return this;
}

PathFormulaContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PathFormulaContext.prototype.constructor = PathFormulaContext;


 
PathFormulaContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function PathGroupContext(parser, ctx) {
	PathFormulaContext.call(this, parser);
    PathFormulaContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PathGroupContext.prototype = Object.create(PathFormulaContext.prototype);
PathGroupContext.prototype.constructor = PathGroupContext;

PrismPropParser.PathGroupContext = PathGroupContext;

PathGroupContext.prototype.lpr = function() {
    return this.getTypedRuleContext(LprContext,0);
};

PathGroupContext.prototype.pathFormula = function() {
    return this.getTypedRuleContext(PathFormulaContext,0);
};

PathGroupContext.prototype.rpr = function() {
    return this.getTypedRuleContext(RprContext,0);
};
PathGroupContext.prototype.enterRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.enterPathGroup(this);
	}
};

PathGroupContext.prototype.exitRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.exitPathGroup(this);
	}
};

PathGroupContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PrismPropVisitor ) {
        return visitor.visitPathGroup(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function PathBoundedBinaryContext(parser, ctx) {
	PathFormulaContext.call(this, parser);
    PathFormulaContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PathBoundedBinaryContext.prototype = Object.create(PathFormulaContext.prototype);
PathBoundedBinaryContext.prototype.constructor = PathBoundedBinaryContext;

PrismPropParser.PathBoundedBinaryContext = PathBoundedBinaryContext;

PathBoundedBinaryContext.prototype.lpr = function() {
    return this.getTypedRuleContext(LprContext,0);
};

PathBoundedBinaryContext.prototype.stateFormula = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StateFormulaContext);
    } else {
        return this.getTypedRuleContext(StateFormulaContext,i);
    }
};

PathBoundedBinaryContext.prototype.binaryBoundedPathOp = function() {
    return this.getTypedRuleContext(BinaryBoundedPathOpContext,0);
};

PathBoundedBinaryContext.prototype.timeBound = function() {
    return this.getTypedRuleContext(TimeBoundContext,0);
};

PathBoundedBinaryContext.prototype.rpr = function() {
    return this.getTypedRuleContext(RprContext,0);
};
PathBoundedBinaryContext.prototype.enterRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.enterPathBoundedBinary(this);
	}
};

PathBoundedBinaryContext.prototype.exitRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.exitPathBoundedBinary(this);
	}
};

PathBoundedBinaryContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PrismPropVisitor ) {
        return visitor.visitPathBoundedBinary(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function PathUnaryContext(parser, ctx) {
	PathFormulaContext.call(this, parser);
    PathFormulaContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PathUnaryContext.prototype = Object.create(PathFormulaContext.prototype);
PathUnaryContext.prototype.constructor = PathUnaryContext;

PrismPropParser.PathUnaryContext = PathUnaryContext;

PathUnaryContext.prototype.unaryPathOp = function() {
    return this.getTypedRuleContext(UnaryPathOpContext,0);
};

PathUnaryContext.prototype.lpr = function() {
    return this.getTypedRuleContext(LprContext,0);
};

PathUnaryContext.prototype.pathFormula = function() {
    return this.getTypedRuleContext(PathFormulaContext,0);
};

PathUnaryContext.prototype.rpr = function() {
    return this.getTypedRuleContext(RprContext,0);
};
PathUnaryContext.prototype.enterRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.enterPathUnary(this);
	}
};

PathUnaryContext.prototype.exitRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.exitPathUnary(this);
	}
};

PathUnaryContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PrismPropVisitor ) {
        return visitor.visitPathUnary(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function PathBinaryLContext(parser, ctx) {
	PathFormulaContext.call(this, parser);
    PathFormulaContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PathBinaryLContext.prototype = Object.create(PathFormulaContext.prototype);
PathBinaryLContext.prototype.constructor = PathBinaryLContext;

PrismPropParser.PathBinaryLContext = PathBinaryLContext;

PathBinaryLContext.prototype.pathFormula = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(PathFormulaContext);
    } else {
        return this.getTypedRuleContext(PathFormulaContext,i);
    }
};

PathBinaryLContext.prototype.land = function() {
    return this.getTypedRuleContext(LandContext,0);
};

PathBinaryLContext.prototype.lor = function() {
    return this.getTypedRuleContext(LorContext,0);
};

PathBinaryLContext.prototype.liff = function() {
    return this.getTypedRuleContext(LiffContext,0);
};

PathBinaryLContext.prototype.limplies = function() {
    return this.getTypedRuleContext(LimpliesContext,0);
};
PathBinaryLContext.prototype.enterRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.enterPathBinaryL(this);
	}
};

PathBinaryLContext.prototype.exitRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.exitPathBinaryL(this);
	}
};

PathBinaryLContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PrismPropVisitor ) {
        return visitor.visitPathBinaryL(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function PathITEContext(parser, ctx) {
	PathFormulaContext.call(this, parser);
    PathFormulaContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PathITEContext.prototype = Object.create(PathFormulaContext.prototype);
PathITEContext.prototype.constructor = PathITEContext;

PrismPropParser.PathITEContext = PathITEContext;

PathITEContext.prototype.pathFormula = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(PathFormulaContext);
    } else {
        return this.getTypedRuleContext(PathFormulaContext,i);
    }
};

PathITEContext.prototype.lite = function() {
    return this.getTypedRuleContext(LiteContext,0);
};

PathITEContext.prototype.colon = function() {
    return this.getTypedRuleContext(ColonContext,0);
};
PathITEContext.prototype.enterRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.enterPathITE(this);
	}
};

PathITEContext.prototype.exitRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.exitPathITE(this);
	}
};

PathITEContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PrismPropVisitor ) {
        return visitor.visitPathITE(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function PathStateContext(parser, ctx) {
	PathFormulaContext.call(this, parser);
    PathFormulaContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PathStateContext.prototype = Object.create(PathFormulaContext.prototype);
PathStateContext.prototype.constructor = PathStateContext;

PrismPropParser.PathStateContext = PathStateContext;

PathStateContext.prototype.stateFormula = function() {
    return this.getTypedRuleContext(StateFormulaContext,0);
};
PathStateContext.prototype.enterRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.enterPathState(this);
	}
};

PathStateContext.prototype.exitRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.exitPathState(this);
	}
};

PathStateContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PrismPropVisitor ) {
        return visitor.visitPathState(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function PathBoundedUnaryContext(parser, ctx) {
	PathFormulaContext.call(this, parser);
    PathFormulaContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PathBoundedUnaryContext.prototype = Object.create(PathFormulaContext.prototype);
PathBoundedUnaryContext.prototype.constructor = PathBoundedUnaryContext;

PrismPropParser.PathBoundedUnaryContext = PathBoundedUnaryContext;

PathBoundedUnaryContext.prototype.unaryBoundedPathOp = function() {
    return this.getTypedRuleContext(UnaryBoundedPathOpContext,0);
};

PathBoundedUnaryContext.prototype.timeBound = function() {
    return this.getTypedRuleContext(TimeBoundContext,0);
};

PathBoundedUnaryContext.prototype.lpr = function() {
    return this.getTypedRuleContext(LprContext,0);
};

PathBoundedUnaryContext.prototype.stateFormula = function() {
    return this.getTypedRuleContext(StateFormulaContext,0);
};

PathBoundedUnaryContext.prototype.rpr = function() {
    return this.getTypedRuleContext(RprContext,0);
};
PathBoundedUnaryContext.prototype.enterRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.enterPathBoundedUnary(this);
	}
};

PathBoundedUnaryContext.prototype.exitRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.exitPathBoundedUnary(this);
	}
};

PathBoundedUnaryContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PrismPropVisitor ) {
        return visitor.visitPathBoundedUnary(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function PathBinaryContext(parser, ctx) {
	PathFormulaContext.call(this, parser);
    PathFormulaContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PathBinaryContext.prototype = Object.create(PathFormulaContext.prototype);
PathBinaryContext.prototype.constructor = PathBinaryContext;

PrismPropParser.PathBinaryContext = PathBinaryContext;

PathBinaryContext.prototype.lpr = function() {
    return this.getTypedRuleContext(LprContext,0);
};

PathBinaryContext.prototype.pathFormula = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(PathFormulaContext);
    } else {
        return this.getTypedRuleContext(PathFormulaContext,i);
    }
};

PathBinaryContext.prototype.binaryPathOp = function() {
    return this.getTypedRuleContext(BinaryPathOpContext,0);
};

PathBinaryContext.prototype.rpr = function() {
    return this.getTypedRuleContext(RprContext,0);
};
PathBinaryContext.prototype.enterRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.enterPathBinary(this);
	}
};

PathBinaryContext.prototype.exitRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.exitPathBinary(this);
	}
};

PathBinaryContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PrismPropVisitor ) {
        return visitor.visitPathBinary(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function PathNegateContext(parser, ctx) {
	PathFormulaContext.call(this, parser);
    PathFormulaContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PathNegateContext.prototype = Object.create(PathFormulaContext.prototype);
PathNegateContext.prototype.constructor = PathNegateContext;

PrismPropParser.PathNegateContext = PathNegateContext;

PathNegateContext.prototype.lnot = function() {
    return this.getTypedRuleContext(LnotContext,0);
};

PathNegateContext.prototype.pathFormula = function() {
    return this.getTypedRuleContext(PathFormulaContext,0);
};
PathNegateContext.prototype.enterRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.enterPathNegate(this);
	}
};

PathNegateContext.prototype.exitRule = function(listener) {
    if(listener instanceof PrismPropListener ) {
        listener.exitPathNegate(this);
	}
};

PathNegateContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PrismPropVisitor ) {
        return visitor.visitPathNegate(this);
    } else {
        return visitor.visitChildren(this);
    }
};



PrismPropParser.prototype.pathFormula = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new PathFormulaContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 4;
    this.enterRecursionRule(localctx, 4, PrismPropParser.RULE_pathFormula, _p);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 140;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
        switch(la_) {
        case 1:
            localctx = new PathStateContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;

            this.state = 108;
            this.stateFormula(0);
            break;

        case 2:
            localctx = new PathGroupContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 109;
            this.lpr();
            this.state = 110;
            this.pathFormula(0);
            this.state = 111;
            this.rpr();
            break;

        case 3:
            localctx = new PathNegateContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 113;
            this.lnot();
            this.state = 114;
            this.pathFormula(10);
            break;

        case 4:
            localctx = new PathUnaryContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 116;
            this.unaryPathOp();
            this.state = 117;
            this.lpr();
            this.state = 118;
            this.pathFormula(0);
            this.state = 119;
            this.rpr();
            break;

        case 5:
            localctx = new PathBoundedUnaryContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 121;
            this.unaryBoundedPathOp();
            this.state = 122;
            this.timeBound();
            this.state = 123;
            this.lpr();
            this.state = 124;
            this.stateFormula(0);
            this.state = 125;
            this.rpr();
            break;

        case 6:
            localctx = new PathBoundedBinaryContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 127;
            this.lpr();
            this.state = 128;
            this.stateFormula(0);
            this.state = 129;
            this.binaryBoundedPathOp();
            this.state = 130;
            this.timeBound();
            this.state = 131;
            this.stateFormula(0);
            this.state = 132;
            this.rpr();
            break;

        case 7:
            localctx = new PathBinaryContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 134;
            this.lpr();
            this.state = 135;
            this.pathFormula(0);
            this.state = 136;
            this.binaryPathOp();
            this.state = 137;
            this.pathFormula(0);
            this.state = 138;
            this.rpr();
            break;

        }
        this._ctx.stop = this._input.LT(-1);
        this.state = 166;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                this.state = 164;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
                switch(la_) {
                case 1:
                    localctx = new PathBinaryLContext(this, new PathFormulaContext(this, _parentctx, _parentState));
                    this.pushNewRecursionContext(localctx, _startState, PrismPropParser.RULE_pathFormula);
                    this.state = 142;
                    if (!( this.precpred(this._ctx, 9))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 9)");
                    }
                    this.state = 143;
                    this.land();
                    this.state = 144;
                    this.pathFormula(10);
                    break;

                case 2:
                    localctx = new PathBinaryLContext(this, new PathFormulaContext(this, _parentctx, _parentState));
                    this.pushNewRecursionContext(localctx, _startState, PrismPropParser.RULE_pathFormula);
                    this.state = 146;
                    if (!( this.precpred(this._ctx, 8))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 8)");
                    }
                    this.state = 147;
                    this.lor();
                    this.state = 148;
                    this.pathFormula(9);
                    break;

                case 3:
                    localctx = new PathBinaryLContext(this, new PathFormulaContext(this, _parentctx, _parentState));
                    this.pushNewRecursionContext(localctx, _startState, PrismPropParser.RULE_pathFormula);
                    this.state = 150;
                    if (!( this.precpred(this._ctx, 7))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
                    }
                    this.state = 151;
                    this.liff();
                    this.state = 152;
                    this.pathFormula(8);
                    break;

                case 4:
                    localctx = new PathBinaryLContext(this, new PathFormulaContext(this, _parentctx, _parentState));
                    this.pushNewRecursionContext(localctx, _startState, PrismPropParser.RULE_pathFormula);
                    this.state = 154;
                    if (!( this.precpred(this._ctx, 6))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
                    }
                    this.state = 155;
                    this.limplies();
                    this.state = 156;
                    this.pathFormula(7);
                    break;

                case 5:
                    localctx = new PathITEContext(this, new PathFormulaContext(this, _parentctx, _parentState));
                    this.pushNewRecursionContext(localctx, _startState, PrismPropParser.RULE_pathFormula);
                    this.state = 158;
                    if (!( this.precpred(this._ctx, 5))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
                    }
                    this.state = 159;
                    this.lite();
                    this.state = 160;
                    this.pathFormula(0);
                    this.state = 161;
                    this.colon();
                    this.state = 162;
                    this.pathFormula(6);
                    break;

                } 
            }
            this.state = 168;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};

